# Azubiprojekte

./: Azubiprojekte.pro  CMakeLists.txt  Doxyfile  README.md  api.md
Autofahn/: autofahn.pro
Battleship/: Battleship.pro  CMakeLists.txt  battlefieldcoords.cpp  battlefieldcoords.h  cabstractbattlefield.cpp  cabstractbattlefield.h  cabstractbattlefieldlabel.cpp  cabstractbattlefieldlabel.h  cbattlefieldbutton.cpp  cbattlefieldbutton.h  cbattlefieldgrid.cpp  cbattlefieldgrid.h  cbattlefieldgriditerator.h  ccomputerbattlefield.cpp  ccomputerbattlefield.h  ccomputerbattlefieldlabel.h  ccomputerplayer.cpp  ccomputerplayer.h  cgamemanagement.cpp  cgamemanagement.h  cplayerbattlefield.cpp  cplayerbattlefield.h  cplayerbattlefieldlabel.cpp  cplayerbattlefieldlabel.h  cplayerplacement.cpp  cplayerplacement.h  cshipatcoords.cpp  cshipatcoords.h  cshipsatcoords.cpp  cshipsatcoords.h  cshipvector.cpp  cshipvector.h  mainwindow.cpp  mainwindow.ui  randomizer.h
Battleship/Battleship/: CMakeLists.txt  cabstractbattlefieldlabel.h  cbattlefieldbutton.cpp  cbattlefieldbutton.h  cbattlefieldgrid.h  cbattlefieldgriditerator.h  cbattlefieldgridregister.h  ccomputerbattlefield.cpp  ccomputerbattlefieldlabel.cpp  ccomputerplayer.h  cgamemanagement.cpp  cplayerplacement.cpp  cplayerplacement.h  cshipatcoords.cpp  cshipatcoords.h  cshipvector.cpp  mainwindow.ui  randomizer.h  res.qrc
Battleship/BattleshipTest/: CMakeLists.txt  battlefieldgrid_test.cpp  battlefieldgrid_test.h  main.cpp  shipvector_test.cpp  shipvector_test.h
ConnectFour/: CMakeLists.txt  ConnectFour.pro  cbuttonbox.cpp  cbuttonbox.h  cfield.cpp  cfield.h  connectFour.qrc  cplayermanagement.cpp  cplayermanagement.h  cplayfield.cpp  cplayfield.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ConnectFour/_build/: ConnectFour
Memory/: CMakeLists.txt  Memory.pro  cdisplaylabel.cpp  cdisplaylabel.h  cmemorybutton.cpp  cmemorybutton.h  cplayfield.cpp  cplayfield.h  cresourcehelper.cpp  cresourcehelper.h  gamemanagement.cpp  gamemanagement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.qrc  utils.cpp  utils.h
Memory/_build/: Memory
Memory/img/cards/chicken/: .info
Memory/img/cards/kuba/: .info
Minesweeper/: CMakeLists.txt  Minesweeper.pro  cdisplay.cpp  cdisplay.h  cminesweeperbutton.cpp  cminesweeperbutton.h  cplayfield.cpp  cplayfield.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
Rechner/: CMakeLists.txt  Rechner.pro  calculatornumber.cpp  calculatornumber.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  result.cpp  result.h
Rechner/Rechner/: .dox  CMakeLists.txt  Rechner.pro  calculator.cpp  calculator.h  calculatornumber.cpp  calculatornumber.h  main.cpp  mainwindow.cpp  mainwindow.h  result.cpp  result.h
Rechner/RechnerTest/: .dox  CMakeLists.txt  RechnerTest.pro  calculatornumber_test.cpp  calculatornumber_test.h  main.cpp  result_test.cpp  result_test.h
RechnerTest/: RechnerTest.pro  calculatornumber_test.h  main.cpp  result_test.h
TextAdventure/: CMakeLists.txt  CMakeLists.txt.old  cbattle.cpp  cbattle.h  ccompanion.cpp  ccompanion.h  cenemy.cpp  cenemy.h  cgamemanagement.cpp  cgamemanagement.h  cinventory.cpp  cinventory.h  citem.cpp  citem.h  cmap.cpp  cmap.h  cmenu.cpp  cmenu.h  colorconsole.cpp  colorconsole.h  conio.cpp  conio.h  console.cpp  console.h  cplayer.cpp  cplayer.h  croom.cpp  croom.h  main.cpp  randomizer.cpp  randomizer.h  ressources.cpp  ressources.h  roomfactory.h
TextAdventure/companion/: cattackercompanion.cpp  ccompanion.cpp  ccompanion.h  cdefendercompanion.cpp  chealercompanion.cpp  companionfactory.cpp  companionfactory.h  cscarymonstercompanion.cpp
TextAdventure/dungeons/: ccavedungeon.cpp  cdungeon.cpp  cdungeon.h  cdungeonmap.cpp  cdungeonmap.h  cdungeonroom.cpp  cdungeonroom.h  cdungeonroomnoroom.cpp  cdungeonroomnoroom.h
TextAdventure/dungeons/rooms/: cdungeonroom.cpp
TextAdventure/encounters/: cbattleencounter.cpp  cbattleencounter.h  cdancingbard.cpp  cdancingbard.h  cdeadhero.cpp  cdeadhero.h  cencounter.cpp  cencounter.h  cmysteriouschest.cpp  cmysteriouschest.h  encounterregister.h
TextAdventure/enemies/: cbountyenemy.cpp  cbountyenemy.h  cenemy.cpp  cenemy.h  clivingchest.cpp  clivingchest.h  cmobenemy.cpp  cmobenemy.h
TextAdventure/items/: cbomb.cpp  cenhancableitem.cpp  cenhancableitem.h  chealingpotion.cpp  chealingpotion.h  citem.cpp  citem.h  cjunkitem.cpp  cphoenixfeather.cpp  crubbishitem.cpp  crubbishitem.h  cshield.cpp  cshield.h  csword.cpp  csword.h  curzasglasses.cpp  curzasglasses.h  itemfactory.cpp  itemfactory.h
TextAdventure/items/equipment/: carmor.cpp  carmor.h  cequipment.cpp  cequipment.h  cjunkarmor.cpp  cjunkarmor.h  cjunkshield.cpp  cjunkshield.h  cjunksword.cpp  cjunksword.h  cshield.cpp  cshield.h  csword.cpp  csword.h
TextAdventure/modules/: cdancingbard.cpp
TextAdventure/modules/cave/: ccave.cpp  ccavebattleencounter.cpp  ccaveboss.cpp  ccaveboss.h  ccavebosstask.cpp  ccavedungeon.cpp  ccavedungeon.h  ccavedungeonmap.cpp  ccavedungeonroom.cpp  ccavedungeonroom.h  ressources.cpp  ressources.h
TextAdventure/rooms/: cfield.cpp  cfield.h  cinjuredpet.cpp  cinjuredpet.h  croom.cpp  croom.h  cstartingroom.cpp  cstartingroom.h  ctown.cpp  ctown.h  roomfactory.cpp  roomfactory.h
TextAdventure/rooms/town/: cblacksmith.cpp  cblacksmith.h  cchurch.cpp  cchurch.h  cfarm.cpp  cshop.cpp  cshop.h  ctavern.cpp  ctown.cpp  ctown.h  ctownmodule.h
TextAdventure/tasks/: cbountyhunt.cpp  ctask.h
TicTacToe/: .dox  CMakeLists.txt  TicTacToe.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  playermanagement.cpp  playermanagement.h  playfield.cpp  playfield.h
TicTacToe2/: .dox  (+11 more)
TicTacToe2/TicTacToe2/: .dox  CMakeLists.txt  TicTacToe2.pro  computerenemy.cpp  computerenemy.h  mainwindow.cpp  mainwindow.h  playermanagement.cpp  playermanagement.h  playfield.cpp  playfield.h  playfieldcoords.cpp  playfieldcoords.h
TicTacToe2/TicTacToe2Test/: CMakeLists.txt  TicTacToe2Test.pro  computerenemy_test.cpp  computerenemy_test.h  main.cpp  playfield_test.cpp  playfield_test.h  playfieldcoords_test.cpp  playfieldcoords_test.h  testdefines.h
(+68 files in other folders)
